--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-.content
+.container
 {
-  border: 2px solid red;
+  /* border: 1px solid red; */
 
   width: 100%;
   height: 100vh;
@@ -8,7 +8,47 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 30px;
 
   padding: 0 ;
   margin: 0 auto;
+
+  /* Deixa para fazer teste comportamento ao rederizar tela */
+  /* flex: none;
+  order: 0;
+  align-self: stretch;
+  flex-grow: 1; */
+
+
+  /* Propeiedade gerado no figma, ver de tem relação com o menu flutuante */
+  /* isolation: isolate; */
 }
+
+.section-header
+{
+  /* border: 1px solid red; */
+
+  width: 100%;
+  height: 80px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+
+  padding: 0px;
+
+  /* background: var(--blue-800); */
+  box-shadow: var(--shadow-800);
+
+  /* Inside auto layout */
+  /* flex: none;
+  order: 0;
+  align-self: stretch;
+  flex-grow: 0;
+  z-index: 0; */
+
+}
+
+
