--- a/src/components/nav-bar/header/Header.module.css
+++ b/src/components/nav-bar/header/Header.module.css
@@ -12,5 +12,16 @@
 }
 
 
+@media screen and (max-width: 1024px) {
+    /* Estilos específicos para telas menores que 600px */
+    
+    .container
+    {
+
+        padding: 0px 20px;
+
+    }
+}
+
 
 
