--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,10 @@
-.container
-{
-  /* border: 1px solid red; */
-
-  width: 100%;
-  height: 100vh;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 30px;
-
-  padding: 0 ;
-  margin: 0 auto;
-
-  /* Deixa para fazer teste comportamento ao rederizar tela */
-  /* flex: none;
-  order: 0;
-  align-self: stretch;
-  flex-grow: 1; */
-
-
-  /* Propeiedade gerado no figma, ver de tem relação com o menu flutuante */
-  /* isolation: isolate; */
-}
 
 .section-header
 {
   /* border: 1px solid red; */
 
   width: 100%;
-  height: 80px;
+  height: 12%;
 
   display: flex;
   flex-direction: row;
@@ -39,16 +14,29 @@
 
   padding: 0px;
 
-  /* background: var(--blue-800); */
   box-shadow: var(--shadow-800);
-
-  /* Inside auto layout */
-  /* flex: none;
-  order: 0;
-  align-self: stretch;
-  flex-grow: 0;
-  z-index: 0; */
 
 }
 
+.section-pages-footer
+{
+  width: 100%;
+  height: calc(100% - 3rem); 
 
+  padding-top: 2rem;
+
+  overflow: auto;
+
+}
+
+.section-footer
+{
+  /* border: 1px solid red; */
+
+  width: 100%;
+  height: 14%;
+  padding: 0;
+
+  background-color: var(--cinza-800);
+
+}
