--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -12,3 +12,12 @@
     padding: 2rem 120px;
 
 }
+
+@media screen and (max-width: 1024px) {
+    /* Estilos específicos para telas menores que 600px */
+    
+    .footer
+    {
+        padding: 0px 20px;
+    }
+}
