--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,14 @@
     /* Cores */
     --blue-800: #4054B2;
     --cinza-800: #363636;
+    --cinza-700: #ededed;
     --cinza-500: #f2f2f2;
     --amarelo-800: #F0C002;
     --verde-800: #00BFA6;
 
     /*  box-shadow */
     --shadow-800: 0px 4px 6px rgba(0, 0, 0, 0.25);
+    --shadow-700: 0px 2px 8px rgba(0, 0, 0, 0.25);
 
   }
 
