--- a/src/page/home/Home.module.css
+++ b/src/page/home/Home.module.css
@@ -7,13 +7,15 @@
 
     display: flex;
     flex-direction: column;
+    gap: 80px;
 
     padding: 0 120px;
+
 }
 
 .contentPerfil
 {
-    border: 1px solid var( --amarelo-800);
+    /* border: 1px solid var( --amarelo-800); */
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -23,64 +25,38 @@
     gap: 10px;
 }
 
-.contentFotoDescription
-{
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-
-    padding: 1rem
-}
-
-.fotoPerfil
-{
-    width: 300px;
-    height: 300px;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    padding: 0px;
-    isolation: isolate;
-
-    border: 4px solid var( --amarelo-800);
-    border-radius: 50%;
-
-    box-shadow: var(--shadow-800);
-}
-
-.descriptionPerfil
-{
-    width: 50%;
-    height: 100%;
-    
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    justify-content: space-evenly;
-    gap: 2px;
-}
-
-.itemDescription
-{
-    /* border: 1px solid red; */
-    display: flex;
-    flex-direction: column;
-    gap: 0;
-}
-
-.itemDescriptionContatos
-{
-    display: flex;
-    /* flex-direction: column; */
-    gap: 8px;
-}
-
 .buttonPerfil
 {
     padding: .8rem;
 }
+
+.contentService
+{
+    /* border: 1px solid red; */
+    
+    width: 100%; 
+    height: 100%;
+
+    padding: 0 ;
+}
+
+.blog
+{
+    /* border: 1px solid blue; */
+
+    height: 600px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: .8rem;
+
+    /* padding: 1rem;    */
+
+}
+
+
 
 @media screen and (max-width: 1024px) {
     /* Estilos específicos para telas menores que 600px */
@@ -90,31 +66,5 @@
         padding: 0px 20px;
     }
 
-    .fotoPerfil
-    {
-        width: 250px;
-        height: 250px;
-    }
 }
 
-@media screen and (max-width: 900px) {
-    /* Estilos específicos para telas menores que 600px */
-    
-    .contentFotoDescription
-    {
-        flex-direction: column;
-
-        padding: 0;
-    }
-
-    .fotoPerfil
-    {
-        width: 180px;
-        height: 180px;
-    }
-
-    .descriptionPerfil
-    {
-        width: 100%;
-    }
-}
