--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -7,9 +7,9 @@
 
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
 
-    padding: 2rem 120px;
+    padding: 1rem 120px;
 
 }
 
@@ -19,5 +19,7 @@
     .footer
     {
         padding: 0px 20px;
+
+        justify-content: space-evenly;
     }
 }
