--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@
   padding: 0;
   margin: 0;
 
-  overflow: hidden;
+  /* overflow: hidden; */
   box-sizing: border-box;
 
   font-family: 'Roboto';
