--- a/src/page/home/Home.module.css
+++ b/src/page/home/Home.module.css
@@ -16,13 +16,17 @@
 .contentPerfil
 {
     /* border: 1px solid var( --amarelo-800); */
+
     width: 100%;
+
+
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     align-items: center;
-    padding: 0px 1rem;
+    justify-content: space-around;
     gap: 10px;
+
+    padding: 2rem 1rem;
 }
 
 .buttonPerfil
