--- a/src/page/register/Register.module.css
+++ b/src/page/register/Register.module.css
@@ -3,13 +3,13 @@
     /* border: 1px solid red; */
 
     width: 100%;
-    height: 72vh;
+    height: 100vh;
 
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    gap: 1rem;
+
+    gap: 4rem;
 
     padding: 0 120px;
     /* margin-bottom: .2rem; */
@@ -25,9 +25,40 @@
     grid-template-columns: repeat(2,  minmax(250px, 1fr));
     grid-gap: 2rem;
 
+    padding: 1rem 0;
+}
+
+
+.boxInput
+{
+    /* border: 1px solid red; */
+
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 0;
+
     padding: 1rem;
 }
 
+.boxContainerInput
+{
+    /* border: 1px solid blue; */
+    width: 100%;
+    height: 52px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    padding: 2.4rem 0;
+
+    overflow: hidden;
+}
 
 
 .button
@@ -45,9 +76,6 @@
 }
 
 
-
-
-
 @media (max-width: 900px) {
 
     .container
@@ -59,7 +87,8 @@
     .form {
 
         grid-template-columns: minmax(250px, 1fr);
-        padding: .2rem;
+        grid-gap: .2rem;
+        padding: .4rem;
     }
-  }
+}
   
