--- a/src/page/login/Login.module.css
+++ b/src/page/login/Login.module.css
@@ -1,5 +1,96 @@
 
 .container
 {
-    border: 1px solid red;
+    /* border: 1px solid blue; */
+    width: 100%;
+    height: 100vh;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: .8rem;
+
+    padding: 0 120px;
 }
+
+.boxTitleDescription
+{
+    /* border: 1px solid blue; */
+
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: .8rem;
+}
+.form
+{
+    /* border: 1px solid red; */
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    padding: 1rem 0;
+}
+
+
+.boxInput
+{
+    /* border: 1px solid red; */
+
+    width: 40%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 0;
+
+    padding: 1rem;
+}
+
+.boxContainerInput
+{
+    /* border: 1px solid blue; */
+    width: 100%;
+    height: 52px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    padding: 2.4rem 0;
+
+    overflow: hidden;
+}
+
+
+.button
+{
+    /* border: 1px solid red; */
+
+    width: 100%;
+    grid-column: 1 / -1;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    padding: .2rem;
+}
+
+
+@media (max-width: 900px) {
+
+    .container
+    {
+        padding: 2rem 20px;
+    }
+
+}
+  
