--- a/src/page/create-post/CreatePost.module.css
+++ b/src/page/create-post/CreatePost.module.css
@@ -1,1 +1,112 @@
 
+.container
+{
+    border: 1px solid red;
+
+    width: 100%;
+    height: 100vh;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    gap: 4rem;
+
+    padding: 0 120px;
+    /* margin-bottom: .2rem; */
+    
+}
+
+.boxTitleDescription
+{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.form
+{
+    /* border: 1px solid red; */
+    width: 85%;
+
+    display: flex;
+    flex-direction: column;
+
+    padding: 1rem 0;
+}
+
+
+.boxInput
+{
+    /* border: 1px solid red; */
+
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 0;
+
+    padding: 1rem;
+}
+
+.boxContainerInput
+{
+    /* border: 1px solid blue; */
+    width: 100%;
+    height: auto;
+
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+
+    /* padding: 2.4rem 0; */
+
+    overflow: hidden;
+}
+
+.textArea
+{
+    /* border: 1px solid red; */
+    width: 90%;
+
+    padding: .4rem 0; 
+}
+
+
+.button
+{
+    /* border: 1px solid red; */
+
+    width: 100%;
+    grid-column: 1 / -1;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    padding: .2rem;
+}
+
+
+@media (max-width: 900px) {
+
+    .container
+{
+
+    padding: 2rem 20px;
+
+}
+    .form {
+
+        grid-template-columns: minmax(250px, 1fr);
+        grid-gap: .2rem;
+        padding: .4rem;
+    }
+}
+  
