--- a/src/page/create-post/CreatePost.module.css
+++ b/src/page/create-post/CreatePost.module.css
@@ -1,7 +1,7 @@
 
 .container
 {
-    border: 1px solid red;
+    /* border: 1px solid red; */
 
     width: 100%;
     height: 100vh;
@@ -10,10 +10,10 @@
     flex-direction: column;
     align-items: center;
 
-    gap: 4rem;
+    gap: 1rem;
 
     padding: 0 120px;
-    /* margin-bottom: .2rem; */
+    margin-bottom: 3rem;
     
 }
 
@@ -47,35 +47,42 @@
 
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: flex-start;
-    gap: 0;
+    gap: .2rem;
 
-    padding: 1rem;
+    padding: .4rem;
 }
 
 .boxContainerInput
 {
     /* border: 1px solid blue; */
+
     width: 100%;
     height: auto;
 
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: center;
     justify-content: center;
+    /* gap: .2rem; */
 
     /* padding: 2.4rem 0; */
 
     overflow: hidden;
 }
 
-.textArea
+.inputTex, .boxErro
 {
     /* border: 1px solid red; */
-    width: 90%;
 
-    padding: .4rem 0; 
+    width: 50%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    padding: .2rem .4rem;
 }
 
 
@@ -104,9 +111,15 @@
 }
     .form {
 
-        grid-template-columns: minmax(250px, 1fr);
-        grid-gap: .2rem;
-        padding: .4rem;
+        width: 100%;
+    }
+
+    
+    .inputTex, .boxErro
+    {
+        /* border: 1px solid red; */
+
+        width: 100%;
     }
 }
   
