--- a/src/page/create-post/CreatePost.module.css
+++ b/src/page/create-post/CreatePost.module.css
@@ -4,7 +4,7 @@
     /* border: 1px solid red; */
 
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
 
     display: flex;
     flex-direction: column;
@@ -13,7 +13,9 @@
     gap: 1rem;
 
     padding: 0 120px;
-    margin-bottom: 3rem;
+   
+
+    
     
 }
 
@@ -31,6 +33,7 @@
 {
     /* border: 1px solid red; */
     width: 85%;
+  
 
     display: flex;
     flex-direction: column;
