--- a/src/components/blog/Blog.module.css
+++ b/src/components/blog/Blog.module.css
@@ -4,7 +4,7 @@
     /* border: 1px solid red; */
 
     width: 100%;
-    height: 100%;
+    height: 100vh;
 
     display: flex;
     flex-direction: column;
@@ -32,7 +32,7 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    gap: .4rem;
+    gap: .8rem;
 
     overflow: auto;
 }
