--- a/src/page/blog-page/BlogPage.module.css
+++ b/src/page/blog-page/BlogPage.module.css
@@ -24,7 +24,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    /* justify-content: space-evenly;    */
     gap: .8rem;
     
 }
