--- a/src/components/blog/Blog.module.css
+++ b/src/components/blog/Blog.module.css
@@ -4,11 +4,13 @@
     /* border: 1px solid red; */
 
     width: 100%;
-    height: 100vh;
+    height: 80vh;
 
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    padding: 1rem 0;
 }
 
 .titleBlog
@@ -34,6 +36,7 @@
     justify-content: center;
     gap: .8rem;
 
+    padding: 1rem 0;
     overflow: auto;
 }
 
