--- a/src/components/blog/Blog.module.css
+++ b/src/components/blog/Blog.module.css
@@ -112,13 +112,13 @@
 {
     /* border: 1px solid red; */
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
 
     display: flex;
     flex-wrap: wrap;
     gap: 0.4rem;
 
-    padding: .8rem 0;
+    padding: .4rem 0;
 
     overflow: auto;
 }
