--- a/src/components/blog/PostDetail.module.css
+++ b/src/components/blog/PostDetail.module.css
@@ -1,92 +1,77 @@
 
+
 .container
 {
-    /* border: 1px solid red; */
-
+    /* border: 1px solid blue; */
+    
     width: 100%;
-    height: 80vh;
+    height: 74vh;
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    padding: 1rem 0;
+    overflow: hidden;
 }
 
-.titleBlog
-{
-    /* border: 1px solid red; */
-    width: 100%;
-    height: 14%;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
 .cards
 {
     /* border: 1px solid red; */
+
     width: 100%;
-    height: 80%;
+    height: 100%;
 
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    gap: .8rem;
+    gap: 1rem;
 
-    padding: 1rem 0;
     overflow: auto;
+
 }
 
 .card
 {
-    /* border: 1px solid blue; */
-    
-    min-width: 280px;
-    max-width:  280px;
-    height: 400px;
-    max-height: 400px;
-
-    flex: 2 2 400px;
-
-    padding: .8rem;
-
-    border-radius: 8px;
-    box-shadow: var(--shadow-700);
-}
-
-.cardHeader
-{
     /* border: 1px solid red; */
 
-    width: 100%;
-    height: 50%;
-
     border-radius: 8px;
+    /* box-shadow: var(--shadow-700); */
+    
+    padding-bottom: 1rem;
 }
 
-.fotoPost
+.headerCard
+{
+    /* border: 1px solid blue; */
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px 8px 0px 0px;
+
+}
+
+.headerCardImg
 {
     width: 100%;
+    max-width: 600px;
     height: 100%;
+    max-height: 600px;
+    /* height: 100%; */
+
+    border-radius: 8px;
 }
 
 .cardBody
 {
     /* border: 1px solid blue; */
 
-    width: 100%;
-    height: 40%;
+    width: 50%;
+    /* height: 40%; */
 
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     justify-content: start;
-    gap: .2rem;
+    gap: .4rem;
 
-    padding: .4rem 0;
+    padding: 1rem 4rem ;
 }
 
 .cardBodyTitle
@@ -121,11 +106,13 @@
     padding: .4rem 0;
 
     overflow: auto;
-}
+} 
 
 .cardFooter
 {
     display: flex;
     align-items: center;
     justify-content: center;
+
+    padding: .8rem;
 }
