--- a/src/page/home/Home.module.css
+++ b/src/page/home/Home.module.css
@@ -60,6 +60,18 @@
 
 }
 
+.titleBlog
+{
+    /* border: 1px solid red; */
+    width: 100%;
+    height: 14%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 
 
 @media screen and (max-width: 1024px) {
