--- a/src/page/search/Search.module.css
+++ b/src/page/search/Search.module.css
@@ -14,3 +14,20 @@
     padding: 2rem  120px;
     
 }
+
+.noPost
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.boxButton
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
