--- a/src/components/blog/PostDetail.module.css
+++ b/src/components/blog/PostDetail.module.css
@@ -52,7 +52,7 @@
     width: 100%;
     max-width: 600px;
     height: 100%;
-    max-height: 600px;
+    max-height: 300px;
     /* height: 100%; */
 
     border-radius: 8px;
@@ -62,7 +62,7 @@
 {
     /* border: 1px solid blue; */
 
-    width: 50%;
+    width: 100%;
     /* height: 40%; */
 
     display: flex;
@@ -100,6 +100,7 @@
     /* height: 100%; */
 
     display: flex;
+    /* flex-direction: row; */
     flex-wrap: wrap;
     gap: 0.4rem;
 
