--- a/src/page/dashboard/Dashboard.module.css
+++ b/src/page/dashboard/Dashboard.module.css
@@ -1,6 +1,6 @@
 .container
 {
-    /* border: 1px solid red; */
+    border: 1px solid red;
 
     width: 100%;
     height: 100vh;
@@ -25,4 +25,81 @@
     align-items: center;
     justify-content: start;
     gap: 2rem;
+}
+
+.contentPosts
+{
+    border: 1px solid blue;
+
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.title{
+
+    border: 1px solid blue;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.table{
+
+    /* border: 1px solid red; */
+
+    display: flex;
+    flex-direction: column;
+    gap: .4rem;
+
+  
+}
+
+.tableHeader
+{
+    /* border: 1px solid blue; */
+
+    display: flex;
+    justify-content: space-between;
+
+    padding: .4rem 0;
+
+    border-bottom: 2px solid var(--cinza-700);
+}
+
+.row
+{
+    font-size: 1rem;
+    font-weight: bold;
+    color: var(--verde-800);
+}
+
+.tableBody{
+
+    /* border: 1px solid blue; */
+
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center ;
+    justify-content: space-between;
+    gap: 1rem;
+
+    padding: 1rem 0 ;
+
+    background-color: var(--cinza-700);  
+}
+.rowBody{
+
+    font-size: .8rem;
+    font-weight: bold;
+    color: var(--cinza-800);
+}
+
+.footer{
+    display: flex;
+    gap: 1rem;
 }
