--- a/src/page/dashboard/Dashboard.module.css
+++ b/src/page/dashboard/Dashboard.module.css
@@ -1,6 +1,6 @@
 .container
 {
-    border: 1px solid red;
+    /* border: 1px solid red; */
 
     width: 100%;
     height: 100vh;
@@ -29,7 +29,7 @@
 
 .contentPosts
 {
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
 
     width: 100%;
     height: 100%;
@@ -41,14 +41,14 @@
 
 .title{
 
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
 
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.table{
+.tableBody{
 
     /* border: 1px solid red; */
 
@@ -78,7 +78,7 @@
     color: var(--verde-800);
 }
 
-.tableBody{
+.tableRow{
 
     /* border: 1px solid blue; */
 
@@ -88,18 +88,40 @@
     justify-content: space-between;
     gap: 1rem;
 
-    padding: 1rem 0 ;
+    padding: 1rem .8rem ;
 
     background-color: var(--cinza-700);  
 }
 .rowBody{
 
-    font-size: .8rem;
+    font-size: 1rem;
     font-weight: bold;
     color: var(--cinza-800);
+}
+.btn{
+
+    font-size: .8em;
+    color: var(--verde-800);
+}
+.btn2{
+
+    font-size: .8em;
+    color: var(--cinza-500);
+    
 }
 
 .footer{
     display: flex;
     gap: 1rem;
+}
+
+
+@media screen and (max-width: 1024px) {
+    /* Estilos específicos para telas menores que 600px */
+    
+    .container
+    {
+        padding: 0px 20px;
+    }
+
 }
