--- a/src/page/edit-post/EditPost.module.css
+++ b/src/page/edit-post/EditPost.module.css
@@ -82,6 +82,7 @@
     width: 50%;
 
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 
@@ -103,6 +104,32 @@
     padding: .2rem;
 }
 
+.headerCard
+{
+    /* border: 1px solid blue; */
+
+   
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    margin: 1rem 0;
+    border-radius: 8px 8px 0px 0px;
+
+}
+
+.headerCardImg
+{
+    width: 100%;
+    max-width: 600px;
+    height: 100%;
+    max-height: 300px;
+    /* height: 100%; */
+
+    border-radius: 8px;
+}
 
 @media (max-width: 900px) {
 
