--- a/src/components/blog/CardsBlog.module.css
+++ b/src/components/blog/CardsBlog.module.css
@@ -18,7 +18,7 @@
 {
     /* border: 1px solid red; */
     width: 100%;
-    height: 80%;
+    /* height: 80%; */
 
     display: flex;
     flex-wrap: wrap;
