--- a/src/page/home/Home.module.css
+++ b/src/page/home/Home.module.css
@@ -18,7 +18,7 @@
     /* border: 1px solid var( --amarelo-800); */
 
     width: 100%;
-
+    /* height: 100vh; */
 
     display: flex;
     flex-direction: column;
@@ -26,12 +26,12 @@
     justify-content: space-around;
     gap: 10px;
 
-    padding: 2rem 1rem;
+    padding: 4rem 0 2rem 0;
 }
 
 .buttonPerfil
 {
-    padding: .8rem;
+    padding: 2rem .8rem .8rem .8rem;
 }
 
 .contentService
@@ -39,8 +39,7 @@
     /* border: 1px solid red; */
     
     width: 100%; 
-    height: 100%;
-
+    
     padding: 0 ;
 }
 
@@ -48,7 +47,8 @@
 {
     /* border: 1px solid blue; */
 
-    height: 600px;
+    height: 100vh;
+    max-height: 600px;
 
     display: flex;
     flex-direction: column;
