--- a/src/page/login/Login.module.css
+++ b/src/page/login/Login.module.css
@@ -40,7 +40,7 @@
 
 .boxInput
 {
-    /* border: 1px solid red; */
+    /* border: 1px solid red;        */
 
     width: 40%;
 
@@ -58,6 +58,7 @@
     /* border: 1px solid blue; */
     width: 100%;
     height: 52px;
+    max-width: 280px;
 
     display: flex;
     flex-direction: column;
@@ -91,6 +92,21 @@
     {
         padding: 2rem 20px;
     }
+    .boxInput
+    {
+        /* border: 1px solid red; */
+    
+        width: 100%;
+    
+        /* display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        gap: 0;
+    
+        padding: 1rem; */
+    }
+   
 
 }
   
